cmake_minimum_required(VERSION 3.28)
project(345_asg1)

set(CMAKE_CXX_STANDARD 17)

add_executable(345_asg1 driver.cpp
        Models/Item.cpp
        Models/Item.h
        Models/EnchantmentInfo.h
        Models/Helmet.cpp
        Models/Helmet.h
        Models/Helmet.h
        Models/Helmet.h
        Models/Armor.cpp
        Models/Armor.h)
